effect: Fix EffectWindow::hasDecoration()

The fractional part in the width() and the height() is truncated by the
QRect(). This makes the hasDecoration() function return true for popups
with fractional scaling. The scale effect checks whether a window has
a decoration to determine whether it can be animated.

The issue can be resolved by changing the QRect to a QRectF but a more
robust way to fix the bug is to inspect the Window::decoration property.

BUG: 499932